# cmake-protobuf

./: .travis.yml  CMakeLists.txt
src/: example.cpp
